--- a/.projen/tasks.json
+++ b/.projen/tasks.json
@@ -195,7 +195,7 @@
     },
     "release": {
       "name": "release",
-      "description": "Prepare a release from \"main\" branch",
+      "description": "Prepare a release from \"master\" branch",
       "env": {
         "RELEASE": "true"
       },
